[package]
name = "rust-sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-stack = "0.2.4"
futures = "0.3.25"
graphql_client = { version = "0.11.0", features = ["reqwest"] }
reqwest = "0.11.12"
serde = "1.0.147"
tokio = { version = "1.21.2", features = ["full"] }


